# isaac_mission_control

./: .bazelrc  .clang-format  .gitignore  BUILD  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  deps.bzl
app/: BUILD  main.py
app/agentic-utilities/mission-control-mcp/: pyproject.toml
app/agentic-utilities/mission-control-mcp/src/: __init__.py  queries.py  server.py
app/api/: BUILD
app/api/clients/: base_api_client.py  cuopt_client.py  cuopt_service_client.py  esp_client.py  mas_client.py  metropolis_client.py  mission_control_client.py  mission_database_client.py  mission_dispatch_client.py  ota_file_service_client.py  s3_client.py  sap_ewm_client.py  waypoint_graph_generator_client.py
app/api/endpoints/: mission_control_api.py  sap_api.py
app/common/: BUILD  metrics.py  models.py  telemetry_base.py  utils.py  waypoint_graph.py
app/config/: BUILD  defaults.yaml  esp.yaml  mas.yaml  ota_config.yaml  test_base.yaml  test_overrides.yaml
app/config/maps/: elevator_office_1_semantic_map.json  galileo_with_docking_station_semantic_map.json
app/core/: BUILD  mission_control.py  mission_control_config.py  objective_behavior_tree.py  objectives.py  robots.py  sap_ewm_background.py  task.py
app/core/objectives/: BUILD  objective_behavior_tree.py  objectives.py  objectives_common.py  objectives_conditional.py  objectives_context.py
app/tests/: BUILD  apriltag_test.py  cuopt_test.py  dock_test.py  exact_end_location_test.py  map_update_test.py  metropolis_test.py  mission_control_mcp_test.py  mission_test.py  objectdetection_test.py  objectives_context_test.py  objectives_decorators_test.py  objectives_test.py  pickplace_test.py  robot_test.py  robotinventory_test.py  s3_test.py  test_context.py
app/tests/test_utils/: BUILD  __init__.py  docker.py  mosquitto.sh  network.py
bzl/: BUILD  engine.bzl  oci_platform_images.bzl  protobuf.gcc9.patch  pylint.py  python.bzl  pytype.py  requirements.txt  requirements_linting.txt  requirements_linting_lock.txt  requirements_lock.txt
cloud_common/objects/: __init__.py  apriltag_results.py  common.py  detection_results.py  mission.py  object.py  objective.py  robot.py
docker/: Dockerfile  Dockerfile.base
docker-compose/: .env  bringup_services.yaml  bringup_services_arm64.yaml  init-db.sh
docs/: api.md  config_tutorial.md  objectives_context_guide.md  objectives_decorators.md  objectives_doc.md
docs/mcp_tutorial/: README.md
docs/tutorial/: tutorial.md
docs/tutorial/assets/: tutorial.yaml
docs/tutorial/docker-compose/: .env  bringup_services_tutorial.yaml  init-db.sh
scripts/: run_dev.sh
toolchain/: BUILD  cc_toolchain_config.bzl
waypoint_selection_ui/: Dockerfile  README.md  bringup_wp_selection_ui.yaml  main.py  requirements.txt
waypoint_selection_ui/templates/: index.html
waypoint_selection_ui/uploads/configs/: carter_arm_warehouse.yaml  carter_warehouse_navigation.yaml  example.yaml
