###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "nvidia_isaac_mission_control", version = "1.0")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.6.1")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "platforms", version = "0.0.11")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.10",
)
use_repo(python, "python_3_10", "python_versions")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "ubuntu",
    # digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "ubuntu:22.04",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
oci.pull(
    name = "python",
    image = "nvcr.io/nvidia/ai-workbench/python-basic:1.0.9",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
oci.pull(
    name = "mosquitto_base",
    image = "docker.io/library/eclipse-mosquitto:2.0.22",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
oci.pull(
    name = "postgres_database_base",
    image = "docker.io/library/postgres:14.5",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
# NVIDIA Isaac images use separate tags per arch (4.3.0-amd64 vs 4.3.0-arm64).
# Pull each arch with its tag; mission_control_oci_platform extension provides
# unified names (mission_simulator_base, etc.) that select by platform.
oci.pull(
    name = "mission_simulator_base_amd64",
    image = "nvcr.io/nvidia/isaac/mission-simulator:4.3.0-amd64",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "mission_simulator_base_arm64",
    image = "nvcr.io/nvidia/isaac/mission-simulator:4.3.0-arm64",
    platforms = ["linux/arm64"],
)
oci.pull(
    name = "mission_dispatch_base_amd64",
    image = "nvcr.io/nvidia/isaac/mission-dispatch:4.3.0-amd64",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "mission_dispatch_base_arm64",
    image = "nvcr.io/nvidia/isaac/mission-dispatch:4.3.0-arm64",
    platforms = ["linux/arm64"],
)
oci.pull(
    name = "mission_database_base_amd64",
    image = "nvcr.io/nvidia/isaac/mission-database:4.3.0-amd64",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "mission_database_base_arm64",
    image = "nvcr.io/nvidia/isaac/mission-database:4.3.0-arm64",
    platforms = ["linux/arm64"],
)
oci.pull(
    name = "waypoint_graph_generator_base_amd64",
    image = "nvcr.io/nvidia/isaac/swagger:03102026",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "waypoint_graph_generator_base_arm64",
    image = "nvcr.io/nvidia/isaac/swagger:03102026-arm64",
    platforms = ["linux/arm64"],
)
oci.pull(
    name = "cuopt_base",
    image = "docker.io/nvidia/cuopt:25.8.0-cuda12.8-py3.12",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "cuopt_base",
    "cuopt_base_linux_amd64",
    "cuopt_base_linux_arm64",
    "mission_database_base_amd64_linux_amd64",
    "mission_database_base_arm64_linux_arm64",
    "mission_dispatch_base_amd64_linux_amd64",
    "mission_dispatch_base_arm64_linux_arm64",
    "mission_simulator_base_amd64_linux_amd64",
    "mission_simulator_base_arm64_linux_arm64",
    "mosquitto_base",
    "mosquitto_base_linux_amd64",
    "mosquitto_base_linux_arm64_v8",
    "postgres_database_base",
    "postgres_database_base_linux_amd64",
    "postgres_database_base_linux_arm64_v8",
    "python",
    "python_linux_amd64",
    "python_linux_arm64",
    "ubuntu",
    "ubuntu_linux_amd64",
    "ubuntu_linux_arm64",
    "waypoint_graph_generator_base_amd64_linux_amd64",
    "waypoint_graph_generator_base_arm64_linux_arm64",
)

# Unified repo names for mission_* images (select/alias by platform; see bzl/oci_platform_images.bzl)
mission_control_oci_platform = use_extension("//bzl:oci_platform_images.bzl", "mission_control_oci_platform")
use_repo(
    mission_control_oci_platform,
    "mission_database_base",
    "mission_database_base_linux_amd64",
    "mission_database_base_linux_arm64",
    "mission_dispatch_base",
    "mission_dispatch_base_linux_amd64",
    "mission_dispatch_base_linux_arm64",
    "mission_simulator_base",
    "mission_simulator_base_linux_amd64",
    "mission_simulator_base_linux_arm64",
    "waypoint_graph_generator_base",
    "waypoint_graph_generator_base_linux_amd64",
    "waypoint_graph_generator_base_linux_arm64",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_third_party",
    python_version = "3.10",
    requirements_lock = "//bzl:requirements_lock.txt",
)
pip.parse(
    hub_name = "python_third_party_linting",
    python_version = "3.10",
    requirements_lock = "//bzl:requirements_linting_lock.txt",
)
use_repo(pip, "python_third_party")
use_repo(pip, "python_third_party_linting")
